<resources>
    <string name="app_name">AppStore</string>
    <string name="ic_search">搜索</string>
    <string name="btn_detail">click me</string>
    <string name="app_detail">应用详情</string>
    <string name="entertain">娱乐</string>
    <string name="game">游戏</string>
    <string name="chat">社交</string>
    <string name="life">生活</string>
    <string name="open_drawer">抽屉打开了</string>
    <string name="close_drawer">抽屉关闭了</string>

    <string-array name="tab_names">
        <item>首页</item>
        <item>应用</item>
        <item>游戏</item>
        <item>专题</item>
        <item>分类</item>
        <item>排行</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Home fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_app_fragment">App fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_game_fragment">game fragment</string>
    <string name="hello_top_fragment">top fragment</string>
    <string name="hello_category_fragment">category fragment</string>
    <string name="hello_subject_fragment">subject fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="load_error">加载失败,点击重试</string>
    <string name="load_more">加载中。。。</string>

    <string name="tv_user_name">未知</string>
    <string name="tv_user_email">unknown@163.com</string>
    <string name="tv_home">首页</string>
    <string name="tv_setting">设置</string>
    <string name="tv_theme">主题</string>
    <string name="tv_scans">安装包管理</string>
    <string name="tv_feedback">反馈</string>
    <string name="tv_updates">检查更新</string>
    <string name="tv_about">关于</string>
    <string name="tv_exit">退出</string>
    <string name="app_detail_introduction">简介</string>
    <string name="action_search">搜索</string>
</resources>
